--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "swr": "^1.0.1",
     "tailwindcss": "^2.2.16"
   },
   "devDependencies": {
