--- a/package.json
+++ b/package.json
@@ -20,14 +20,17 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.2",
+    "@testing-library/react-hooks": "^7.0.2",
     "@types/react": "17.0.27",
     "autoprefixer": "^10.3.7",
     "babel-jest": "^27.2.5",
     "babel-plugin-inline-react-svg": "^2.0.1",
+    "dotenv": "^10.0.0",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.2.5",
+    "msw": "^0.35.0",
     "next-images": "^1.8.1",
     "postcss": "^8.3.9",
     "postcss-flexbugs-fixes": "^5.0.2",
@@ -35,7 +38,8 @@
     "react-test-renderer": "^17.0.2",
     "stylelint": "^13.13.1",
     "stylelint-config-recommended": "^5.0.0",
-    "typescript": "4.4.3"
+    "typescript": "4.4.3",
+    "whatwg-fetch": "^3.6.2"
   },
   "browserslist": [
     ">0.3%",
