feat: add simple list details view

--- a/.env.test
+++ b/.env.test
@@ -1,2 +1,2 @@
-# 
+# This could be different on different envs
 NEXT_PUBLIC_API_URL='https://lh-real-estates-challenge-api.herokuapp.com/real-estates'
